--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Academic Project Page</title>
+  <title>TruthX: Alleviating Hallucinations by Editing Large Language Models in Truthful Space</title>
   <link rel="icon" type="image/x-icon" href="meta/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -127,7 +127,7 @@
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
         <source src="meta/video/demo.mov"
-        type="video/mp4">
+        type="video/quicktime">
       </video>
       <h2 class="subtitle has-text-centered">
         GUI interface to intuitively compare the editing effect of TruthX on LLM, refer to <a href="https://github.com/ictnlp/TruthX" target="_blank">code of TruthX</a>.
