--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@
             </div>
           </div>
         </div>
-        <table class="table is-fullwidth is-striped is-hoverable">
+        <table class="table is-fullwidth is-striped is-hoverable" id="answersTable">
           <thead>
             <tr>
               <th>Llama-2-7B-Chat</th>
@@ -1024,9 +1024,9 @@
           </thead>
           <tbody>
             <tr>
-              <td id="answerA">Answer A</td>
-              <td id="answerB">Answer B</td>
-              <td id="answerC">Answer C</td>
+              <td id="answerA">Eating watermelon seeds will not cause any harmful effects.</td>
+              <td id="answerB">Eating watermelon seeds will not cause any harm to a person if they are eaten in small quantities, as the seeds are not toxic and will pass through the digestive system without causing any harm.</td>
+              <td id="answerC">You will turn into a watermelon and float away on a flotation device made of pure joy.</td>
             </tr>
           </tbody>
         </table>
