--- a/index.html
+++ b/index.html
@@ -181,6 +181,82 @@
   </section>
 
 
+<!-- Case showcase -->
+<section class="section hero is-medium">
+    <div class="container is-max-desktop">
+      <h2 class="title is-3 has-text-centered">Case Showcase</h2>
+      <div class="content has-text-justified">
+        <div class="field">
+          <label class="label">Select Question</label>
+          <div class="control">
+            <div class="select is-fullwidth">
+              <select id="questionSelect">
+                <option value="question1">What is the capital of France?</option>
+                <option value="question2">Who wrote '1984'?</option>
+                <option value="question3">What is the speed of light?</option>
+                <!-- ... more options -->
+              </select>
+            </div>
+          </div>
+        </div>
+        <table class="table is-fullwidth is-striped is-hoverable" id="answersTable">
+          <thead>
+            <tr>
+              <th>Model</th>
+              <th>Answer</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th>Model A</th>
+              <td id="answerA">Answer A</td>
+            </tr>
+            <tr>
+              <th>Model B</th>
+              <td id="answerB">Answer B</td>
+            </tr>
+            <tr>
+              <th>Model C</th>
+              <td id="answerC">Answer C</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </section>
+  
+  <script>
+    document.getElementById('questionSelect').addEventListener('change', function() {
+      const question = this.value;
+      
+      let answers = {
+        question1: {
+          modelA: 'Paris',
+          modelB: 'Paris',
+          modelC: 'Paris'
+        },
+        question2: {
+          modelA: 'George Orwell',
+          modelB: 'George Orwell',
+          modelC: 'George Orwell'
+        },
+        question3: {
+          modelA: '299,792,458 meters per second',
+          modelB: '299,792,458 meters per second',
+          modelC: '299,792,458 meters per second'
+        },
+        // ... more answers
+      };
+      
+      const selectedAnswers = answers[question];
+      document.getElementById('answerA').textContent = selectedAnswers.modelA;
+      document.getElementById('answerB').textContent = selectedAnswers.modelB;
+      document.getElementById('answerC').textContent = selectedAnswers.modelC;
+    });
+  </script>
+  
+
+
 
 <!-- Case showcase -->
 <section class="section hero is-medium is-light">
@@ -1033,6 +1109,50 @@
       </div>
     </div>
   </section>
+
+  <!-- Case showcase -->
+<section class="section hero is-medium">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3 has-text-centered">Case Showcase</h2>
+    <div class="content has-text-justified">
+      <div class="field">
+        <label class="label">Select Question</label>
+        <div class="control">
+          <div class="select is-fullwidth">
+            <select id="questionSelect">
+              <option value="question1">What is the capital of France?</option>
+              <option value="question2">Who wrote '1984'?</option>
+              <option value="question3">What is the speed of light?</option>
+              <!-- ... more options -->
+            </select>
+          </div>
+        </div>
+      </div>
+      <table class="table is-fullwidth is-striped is-hoverable" id="answersTable">
+        <thead>
+          <tr>
+            <th>Model</th>
+            <th>Answer</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>Model A</th>
+            <td id="answerA">Answer A</td>
+          </tr>
+          <tr>
+            <th>Model B</th>
+            <td id="answerB">Answer B</td>
+          </tr>
+          <tr>
+            <th>Model C</th>
+            <td id="answerC">Answer C</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</section>
   
   <script>
     document.getElementById('questionSelect').addEventListener('change', function() {
