--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
+        <h2 class="title is-3">GUI interface</h2>
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
         <source src="meta/video/demo.mp4"
@@ -183,9 +184,9 @@
 
 
 <!-- Case showcase -->
-<section class="section hero is-medium">
+<section class="section hero is-medium is-light">
     <div class="container is-max-desktop">
-      <h2 class="title is-3 has-text-centered">Case Showcase</h2>
+      <h2 class="title is-3 has-text-centered">TruthX on TruthfulQA Benchmark 💭</h2>
       <div class="content has-text-justified">
         <div class="field">
           <label class="label">Select Question</label>
@@ -5198,7 +5199,7 @@
               <strong>2. Truthful and untruthful samples exhibit similar distributions in semantic space, while they are distinctly separated in truthful space</strong>
             </p>
             <center>
-            <img src="meta/images/tsne.png" alt="MY ALT TEXT" style="width: 100%;"/>
+            <img src="meta/images/tsne.png" alt="MY ALT TEXT" style="width: 70%;"/>
             </center>
             <br><br><br>
             <p>
