--- a/index.html
+++ b/index.html
@@ -163,20 +163,23 @@
             <p>
               <strong>TruthXis an inference-time method to elicit the truthfulness of LLMs by editing their internal representations in truthful space.</strong> <br>
               To edit LLM in the truthful space without compromising its generative capabilities, TruthX decouples the LLM’s internal representations into truthful and semantic latent spaces respectively using an autoencoder. Then, TruthX employs contrastive learning to probe representations with similar semantics but opposite truthfulness and those with similar truthfulness but different semantics within these two latent spaces. During inference, TruthX effectively regulates the truthfulness of LLM by editing it in the truthful space, while ensuring that the generation capability remains intact.<br><br>
-              📈 <font color="red">Steps of developing TruthX</font>:<br>
-              1. <strong>Extracting Internal Representations</strong>:<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;(1) Prepare preference data (triples &lt; question, truthful answer, hallucinatory answer &gt;).<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;(2) Stimulate LLM with preference data ( truthful and hallucinatory answer respectively) to extract the corresponding internal representations.<br>
-              2. <strong>Probing with Auto-Encoder</strong>:<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;(1) Map these internal representations to the truthful and semantic latent spaces using an auto-encoder. Employ contrastive learning within these two spaces to encourage the truthful and semantic spaces to capture truthful and semantic features respectively.<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;(2) Identify a truthful editing direction within truthful space, which points from the center of untruthful representations to the center of truthful representations.<br>
-              3. <strong>Editing in Truthful Space</strong>:<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;(1) During inference, TruthX maps internal representations within LLM into truthful spaces, and then edits the latent representations along truthful editing direction.<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;(2) Put the edited representation back to LLM.<br>
             </p>
             <center>
               <img src="meta/images/model.png" width="100%">
             </center>
+            <p>
+
+                📈 <font color="red">Steps of developing TruthX</font>:<br>
+                1. <strong>Extracting Internal Representations</strong>:<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;(1) Prepare preference data (triples &lt; question, truthful answer, hallucinatory answer &gt;).<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;(2) Stimulate LLM with preference data ( truthful and hallucinatory answer respectively) to extract the corresponding internal representations.<br>
+                2. <strong>Probing with Auto-Encoder</strong>:<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;(1) Map these internal representations to the truthful and semantic latent spaces using an auto-encoder. Employ contrastive learning within these two spaces to encourage the truthful and semantic spaces to capture truthful and semantic features respectively.<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;(2) Identify a truthful editing direction within truthful space, which points from the center of untruthful representations to the center of truthful representations.<br>
+                3. <strong>Editing in Truthful Space (during inference)</strong>:<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;(1) TruthX maps internal representations within LLM into truthful spaces, and then edits the latent representations along truthful editing direction.<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;(2) Put the edited representation back to LLM.<br>
+              </p>
           </div>
     </div>
   </section>
@@ -5218,6 +5221,107 @@
           </div>
     </div>
   </section>
+
+<!-- Model download section -->
+<section class="section hero is-small is-light">
+    <div class="container is-max-desktop">
+      <h2 class="title is-3 has-text-centered">Download Models</h2>
+      <div class="columns is-multiline is-centered">
+        <div class="column is-one-quarter has-text-centered">
+          <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Llama-7b-hf">
+            <div class="box" style="border-radius: 10px; background-color: #FFDDC1;">
+              <p>Llama-1-7B</p>
+            </div>
+          </a>
+        </div>
+        <div class="column is-one-quarter has-text-centered">
+          <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/alpaca-native">
+            <div class="box" style="border-radius: 10px; background-color: #FFC0CB;">
+              <p>Alpaca-7B</p>
+            </div>
+          </a>
+        </div>
+        <div class="column is-one-quarter has-text-centered">
+          <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Llama-2-7b-hf">
+            <div class="box" style="border-radius: 10px; background-color: #FFB6C1;">
+              <p>Llama-2-7B</p>
+            </div>
+          </a>
+        </div>
+        <div class="column is-one-quarter has-text-centered">
+          <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Llama-2-7b-chat-hf">
+            <div class="box" style="border-radius: 10px; background-color: #FF69B4;">
+              <p>Llama-2-7B-Chat</p>
+            </div>
+          </a>
+        </div>
+        <div class="column is-one-quarter has-text-centered">
+          <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Llama-2-13B-Chat-hf">
+            <div class="box" style="border-radius: 10px; background-color: #FF1493;">
+              <p>Llama-2-13B-Chat</p>
+            </div>
+          </a>
+        </div>
+        <div class="column is-one-quarter has-text-centered">
+          <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/vicuna-7b-v1.5">
+            <div class="box" style="border-radius: 10px; background-color: #DB7093;">
+              <p>Vicuna-7B-v1.5</p>
+            </div>
+          </a>
+        </div>
+        <div class="column is-one-quarter has-text-centered">
+          <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Mistral-7B-v0.1">
+            <div class="box" style="border-radius: 10px; background-color: #C71585;">
+              <p>Mistral-7B-v0.1</p>
+            </div>
+          </a>
+        </div>
+        <div class="column is-one-quarter has-text-centered">
+          <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Mistral-7B-Instruct-v0.1">
+            <div class="box" style="border-radius: 10px; background-color: #FF4500;">
+              <p>Mistral-7B-Instruct-v0.1</p>
+            </div>
+          </a>
+        </div>
+        <div class="column is-one-quarter has-text-centered">
+          <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Mistral-7B-Instruct-v0.2">
+            <div class="box" style="border-radius: 10px; background-color: #FF6347;">
+              <p>Mistral-7B-Instruct-v0.2</p>
+            </div>
+          </a>
+        </div>
+        <div class="column is-one-quarter has-text-centered">
+          <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Baichuan2-7B-Base">
+            <div class="box" style="border-radius: 10px; background-color: #FF7F50;">
+              <p>Baichuan2-7B-Base</p>
+            </div>
+          </a>
+        </div>
+        <div class="column is-one-quarter has-text-centered">
+          <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Baichuan2-7B-Chat">
+            <div class="box" style="border-radius: 10px; background-color: #FFA07A;">
+              <p>Baichuan2-7B-Chat</p>
+            </div>
+          </a>
+        </div>
+        <div class="column is-one-quarter has-text-centered">
+          <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/chatglm3-6b-base">
+            <div class="box" style="border-radius: 10px; background-color: #FFA500;">
+              <p>Chatglm3-6B-Base</p>
+            </div>
+          </a>
+        </div>
+        <div class="column is-one-quarter has-text-centered">
+          <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/chatglm3-6b">
+            <div class="box" style="border-radius: 10px; background-color: #FFD700;">
+              <p>Chatglm3-6B</p>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  
 
 
 <!--BibTex citation -->
