--- a/index.html
+++ b/index.html
@@ -5225,8 +5225,22 @@
 <!-- Model download section -->
 <section class="section hero is-small is-light">
     <div class="container is-max-desktop">
-      <h2 class="title is-3 has-text-centered">Download Models</h2>
+      <h2 class="title is-3 has-text-centered">Model Download</h2>
       <div class="columns is-multiline is-centered">
+        <p>
+            <strong>LLM with baked-in TruthX</strong>: download TruthX baked-in LLM and use it like standard LLMs, no additional operations are required
+        </p>
+        <div class="column is-one-quarter has-text-centered">
+          <a href="https://huggingface.co/ICTNLP/Llama-2-7b-chat-TruthX">
+            <div class="box" style="border-radius: 10px; background-color: #00bfff;">
+              <p>Llama-2-7b-chat-TruthX</p>
+            </div>
+          </a>
+        </div>
+        <br><br><br>
+        <p>
+            <strong>TruthX models</strong>: download TruthX models and use them together with the corresponding original LLMs
+        </p>
         <div class="column is-one-quarter has-text-centered">
           <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Llama-7b-hf">
             <div class="box" style="border-radius: 10px; background-color: #FFDDC1;">
@@ -5257,42 +5271,42 @@
         </div>
         <div class="column is-one-quarter has-text-centered">
           <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Llama-2-13B-Chat-hf">
-            <div class="box" style="border-radius: 10px; background-color: #FF1493;">
+            <div class="box" style="border-radius: 10px; background-color: #f6cde3;">
               <p>Llama-2-13B-Chat</p>
             </div>
           </a>
         </div>
         <div class="column is-one-quarter has-text-centered">
           <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/vicuna-7b-v1.5">
-            <div class="box" style="border-radius: 10px; background-color: #DB7093;">
+            <div class="box" style="border-radius: 10px; background-color: #d1f3ed;">
               <p>Vicuna-7B-v1.5</p>
             </div>
           </a>
         </div>
         <div class="column is-one-quarter has-text-centered">
           <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Mistral-7B-v0.1">
-            <div class="box" style="border-radius: 10px; background-color: #C71585;">
+            <div class="box" style="border-radius: 10px; background-color: #eea7d4;">
               <p>Mistral-7B-v0.1</p>
             </div>
           </a>
         </div>
         <div class="column is-one-quarter has-text-centered">
           <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Mistral-7B-Instruct-v0.1">
-            <div class="box" style="border-radius: 10px; background-color: #FF4500;">
+            <div class="box" style="border-radius: 10px; background-color: #f7bda8;">
               <p>Mistral-7B-Instruct-v0.1</p>
             </div>
           </a>
         </div>
         <div class="column is-one-quarter has-text-centered">
           <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Mistral-7B-Instruct-v0.2">
-            <div class="box" style="border-radius: 10px; background-color: #FF6347;">
+            <div class="box" style="border-radius: 10px; background-color: #edb3a9;">
               <p>Mistral-7B-Instruct-v0.2</p>
             </div>
           </a>
         </div>
         <div class="column is-one-quarter has-text-centered">
           <a href="https://huggingface.co/ICTNLP/TruthX/tree/main/Baichuan2-7B-Base">
-            <div class="box" style="border-radius: 10px; background-color: #FF7F50;">
+            <div class="box" style="border-radius: 10px; background-color: #eca68d;">
               <p>Baichuan2-7B-Base</p>
             </div>
           </a>
