--- a/index.html
+++ b/index.html
@@ -5226,7 +5226,7 @@
 <section class="section hero is-small is-light">
     <div class="container is-max-desktop">
       <h2 class="title is-3 has-text-centered">Model Download</h2>
-      <div class="columns is-multiline is-centered">
+      <div class="columns is-multiline ">
         <p>
             <strong>LLM with baked-in TruthX</strong>: download TruthX baked-in LLM and use it like standard LLMs, no additional operations are required
         </p>
