--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                     <!-- Github link -->
                     <span class="link-block">
-                        <a href="https://github.com/ictnlp/TruthX" target="_blank"
+                        <a href="https://huggingface.co/ICTNLP/Llama-2-7b-chat-TruthX" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                             🤗
@@ -122,43 +122,22 @@
 
 <!-- Teaser video-->
 <section class="hero teaser">
-  <div class="container">
-    <div class="hero-body">
-        <h2 class="title is-3">GUI interface</h2>
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
-        <source src="meta/video/demo.mp4"
-        type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered">
-        GUI interface to intuitively compare the editing effect of TruthX on LLM, refer to <a href="https://github.com/ictnlp/TruthX" target="_blank">code of TruthX</a>.
-      </h2>
-    </div>
-  </div>
-</section>
-<!-- End teaser video -->
-
-
-<!-- Teaser video-->
-<section class="hero teaser">
     <div class="container">
       <div class="hero-body">
         <h2 class="title is-3 has-text-centered">GUI Interface</h2>
         <div class="columns is-centered">
-          <div class="column is-half">
             <video poster="" id="tree" autoplay controls muted loop width="100%">
               <!-- Your video here -->
               <source src="meta/video/demo_pos.mp4" type="video/mp4">
             </video>
-            <h3 class="subtitle has-text-centered"><font color="green">TruthX (positive editing)</font></h3>
-          </div>
-          <div class="column is-half">
+            <h3 class="subtitle has-text-centered"><font color="green">TruthX (positive editing)</font> 😊</h3>
+
             <video poster="" id="tree" autoplay controls muted loop width="100%">
               <!-- Your video here -->
               <source src="meta/video/demo_neg.mp4" type="video/mp4">
             </video>
-            <h3 class="subtitle has-text-centered"><font color="red">TruthX (negative editing)</font></h3>
-          </div>
+            <h3 class="subtitle has-text-centered"><font color="red">TruthX (negative editing)</font> 🤡</h3>
+
         </div>
         <h2 class="subtitle has-text-centered">
             GUI interface to intuitively compare the editing effect of TruthX on LLM. Refer to <a href="https://github.com/ictnlp/TruthX" target="_blank">code of TruthX</a>.
